Fix mobile overflow bug with table width

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@
 .gsae-gif-block .alignfull .components-resizable-box__container,
 .gsae-gif-block .alignfull > figure {
 	width: 100%!important;
+	max-width: 100%!important;
 	margin-left: auto!important;
 	margin-right: auto!important;
 	height: auto!important;
@@ -58,12 +59,19 @@
 	display: block;
 	width: 100%;
 }
-.gsae-gif-block figure {
-	display: flex;
+/*.gsae-gif-block figure {
+	display: flex!important;
 	flex-direction: column;
+}*/
+.gsae-gif-block .alignnone {
+	display: table;
 }
 .gsae-gif-block figure img {
 	width: 100%!important;
+}
+.gsae-gif-block .alignnone > figcaption {
+    display: table-caption;
+    caption-side: bottom;
 }
 .nokey {
 	font-style: italic;
@@ -81,7 +89,7 @@
 }
 .gsae-gif-block .alignwide {
 	width: 100vw!important;
-	max-width: 100vw;
+	max-width: 100vw!important;
 	position: relative;
 	left: 50%;
 	right: 50%;
